# music-party-sync

./: README.md
api_server/: Cargo.toml
api_server/src/: main.rs
backend/: package-lock.json  package.json  server.js
backend/controllers/: roomController.js
backend/routes/: roomRoutes.js
backend/services/: socketService.js
backend/sockets/: socketHandler.js
buffer/: Cargo.toml
buffer/src/core/buffer/: buffer_manager.rs  error.rs
buffer/src/core/sync/: synchronizer.rs
echosync/: Cargo.toml
echosync/api_server/: README.md
echosync/api_server/src/: main.rs
echosync/buffer/: Cargo.toml  README.md
echosync/buffer/benches/: buffer_bench.rs
echosync/buffer/src/: lib.rs
echosync/buffer/src/core/: mod.rs
echosync/scheduler/: Cargo.toml
echosync/scheduler/benches/: scheduler_bench.rs
echosync/scheduler/src/: config.rs  playback_queue.rs  scheduler.rs  timeline.rs
echosync/streaming/: Cargo.toml  README.md
echosync/streaming/benches/: streaming_bench.rs
echosync/streaming/src/: config.rs  error.rs  lib.rs  packet.rs  queue.rs
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/lib/app/: app.dart  theme.dart
frontend/lib/core/constants/: api_constants.dart  app_colors.dart  app_radius.dart  app_spacing.dart  (+1 more)
frontend/lib/models/: member.dart  room.dart
network_engine/: connectionManager.js  discovery.js  index.js  package-lock.json  package.json  transport.js
scheduler/: Cargo.toml  README.md
scheduler/src/: error.rs  lib.rs  scheduler.rs  statistics.rs
streaming/: Cargo.toml
streaming/src/: engine.rs  queue.rs
(+33 files in other folders)
